#!/usr/bin/env php
<?php

use Symfony\Component\Console\Application;
use Zenstruck\Changelog\Command\GenerateCommand;
use Zenstruck\Changelog\Command\ReleaseCommand;
use Zenstruck\Changelog\Command\SelfUpdateCommand;

set_time_limit(0);

foreach ([__DIR__ . '/../../../autoload.php', __DIR__ . '/../vendor/autoload.php'] as $autoload) {
    if (file_exists($autoload)) {
        break;
    }
}

require $autoload;

$application = new Application('zenstruck/changelog', '@dev');

$application->addCommands([
    $default = new GenerateCommand(),
    new ReleaseCommand()
]);

if (\Phar::running()) {
    // only register self update if using as phar
    $application->add(new SelfUpdateCommand());
}

$application->setDefaultCommand($default->getName());
$application->run();