@@ -2,6 +2,7 @@
 <?php
 
 use Symfony\Component\Console\Application;
+use Zenstruck\Changelog\Command\ConfigureCommand;
 use Zenstruck\Changelog\Command\GenerateCommand;
 use Zenstruck\Changelog\Command\ReleaseCommand;
 use Zenstruck\Changelog\Command\SelfUpdateCommand;
@@ -20,7 +21,8 @@ $application = new Application('zenstruck/changelog', '@dev');
 
 $application->addCommands([
     $default = new GenerateCommand(),
-    new ReleaseCommand()
+    new ReleaseCommand(),
+    new ConfigureCommand()
 ]);
 
 if (\Phar::running()) {
